# test-repo-2

./: Dockerfile
include/apache-airflow-providers-astronomercoreapi/: pyproject.toml
include/apache-airflow-providers-astronomercoreapi/astronomer_core_api/: .openapi-generator-ignore  pyproject.toml
include/apache-airflow-providers-astronomercoreapi/astronomer_core_api/.openapi-generator/: FILES
include/apache-airflow-providers-astronomercoreapi/astronomer_core_api/hooks/: astronomer_core_api_api.py
include/apache-airflow-providers-astronomercoreapi/astronomer_core_api/operators/: add_team_members.py  clear_dag_run.py  clear_task_instances.py  create_aws_cluster.py  create_azure_cluster.py  create_cell.py  create_cell_run.py  create_cell_type.py  create_connection.py  create_dag_run.py  create_deployment.py  create_gcp_cluster.py  create_managed_domain.py  create_organization.py  create_organization_api_token.py  create_pipeline.py  create_pipeline_session.py  create_project.py  create_project_git_branch.py  create_project_git_commit.py  create_sso_connection.py  create_team.py  create_user_invite.py  create_virtual_runtime.py  create_workspace.py  create_workspace_api_token.py  delete_cell.py  delete_cell_type.py  delete_cluster.py  delete_connection.py  delete_managed_domain.py  delete_org_user.py  delete_organization_api_token.py  delete_pipeline.py  delete_project.py  delete_sso_bypass_key.py  delete_sso_connection.py  delete_team.py  (+146 more)
include/apache-airflow-providers-astronomercoreapi/client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
include/apache-airflow-providers-astronomercoreapi/hooks/: astronomer_core_api_api.py
include/apache-airflow-providers-astronomercoreapi/operators/: add_team_members.py  clear_dag_run.py  clear_task_instances.py  create_aws_cluster.py  create_azure_cluster.py  create_cell.py  create_cell_run.py  create_cell_type.py  create_connection.py  create_dag_run.py  create_deployment.py  create_gcp_cluster.py  create_managed_domain.py  create_organization.py  create_organization_api_token.py  create_pipeline.py  create_pipeline_session.py  create_project.py  create_project_git_branch.py  create_project_git_commit.py  create_sso_connection.py  create_team.py  create_user_invite.py  create_virtual_runtime.py  create_workspace.py  create_workspace_api_token.py  delete_cell.py  delete_cell_type.py  delete_cluster.py  delete_connection.py  delete_managed_domain.py  delete_org_user.py  delete_organization_api_token.py  delete_pipeline.py  delete_project.py  delete_sso_bypass_key.py  delete_sso_connection.py  delete_team.py  delete_user_invite.py  delete_virtual_runtime.py  (+144 more)
include/astronomerregistry/: pyproject.toml
include/astronomerregistry/client/: .gitlab-ci.yml  .travis.yml  tox.ini
include/astronomerregistry/operators/: create_label.py  delete_dag.py  delete_provider.py  get_dag.py  get_module.py  get_provider.py  list_modules.py  list_modules_internal.py  search.py  update_module.py  update_provider.py
(+1177 files in other folders)
